--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="profile" href="http://gmpg.org/xfn/11">
+<script src="//scripts.iconnode.com/121683.js"></script>
 
 <script>(function(html){html.className = html.className.replace(/\bno-js\b/,'js')})(document.documentElement);</script>
 <title>247 Minneapolis Towing &ndash; Latua Transport &ndash; 24/7 Fast, Reliable and Affordable Towing Service in Minneapolis</title>
