--- a/call-now/call.html
+++ b/call-now/call.html
@@ -182,7 +182,7 @@ img.emoji {
                 		<div id="Contact" class="section-0">
         <h2 style="font-size:2.4em; line-height:1em;">Fast, reliable &amp; affordable towing <span style="font-weight:bold;">anywhere in Mississippi &amp; The Surrounding Area</span> </h2>
 		<p style="font-size:1em; margin-bottom:10px !important; line-height:1.5em; ">30 min ETA or less (no traffic). <br>NOTE: We don't do impound. If you're looking for your car, we don't have it.</p>
-<h4 style="font-size:1.5em; margin-bottom:5px;">Call for a Free Quote:</h4>        <h3><a href="tel:7637103629" class="call-button" id="call-conv"><i class="fa fa-phone fa- "></i> 763-710-2222</a></h3>        
+<h4 style="font-size:1.5em; margin-bottom:5px;">Call Us Now:</h4>        <h3><a href="tel:7637103629" class="call-button" id="call-conv"><i class="fa fa-phone fa- "></i> 763-710-2222</a></h3>        
         
         <!-- Email button -->
         
